# src/routes/subject.routes.ts
@@ -3,7 +3,11 @@ import subjectController from "../controllers/subject.controller.js";
 import { authenticate } from "../middlewares/auth.middleware.js";
 import { rbac } from "../middlewares/rbac.middleware.js";
 import { validate } from "../middlewares/validate.middleware.js";
-import { createSubjectSchema, updateSubjectSchema } from "../validators/subject.validators.js";
+import {
+  createSubjectSchema,
+  updateSubjectSchema,
+  duplicateSubjectSchema,
+} from "../validators/subject.validators.js";
 import { UserRole } from "../types/enums/role.enum.js";
 
 const router = Router();
@@ -12,6 +16,12 @@ router.use(authenticate);
 router.get("/", subjectController.getAll);
 router.get("/:id", subjectController.getOne);
 router.get("/:id/students", rbac([UserRole.Teacher]), subjectController.getStudents);
+router.post(
+  "/:id/duplicate",
+  rbac([UserRole.Teacher]),
+  validate(duplicateSubjectSchema),
+  subjectController.duplicate
+);
 router.post("/", rbac([UserRole.Teacher]), validate(createSubjectSchema), subjectController.create);
 router.put(
   "/:id",
